--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
 
-  font-family: sans-sans-serif;
+  font-family: sans-serif;
 }
 
 *, *::before, *::after {
